--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -27,6 +27,8 @@ jobs:
           key: ${{ runner.OS }}-npm-cache
           restore-keys: |
             ${{ runner.OS }}-npm-cache
+      - name: Install sea
+        run: npm i hexo-theme-sea
       - name: Install Dependencies
         run: npm install
       - name: Build
