--- a/_config.sea.yml
+++ b/_config.sea.yml
@@ -1,3 +1,9 @@
+menu:
+  - name: Posts # 名称
+    url: /articles/ # 链接
+  - name: Tags
+    url: /tags/
+
 articles:
   path: 'articles' # 路由
   per_page: 10 # 分页数
